[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = ["swimapp.py", "README.md"]

[project]
name = "swim-workout-generator"
version = "0.1.0"
requires-python = ">=3.9"
authors = [
  {name = "Aden Li"},
]
dependencies = [
    "dash>=3.2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]
readme = "README.md"
